--- a/00-N1-CS1B-FIA-Sept-2022/N1-Question-3.Rmd
+++ b/00-N1-CS1B-FIA-Sept-2022/N1-Question-3.Rmd
@@ -10,11 +10,11 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-library(magrittr)
-library(knitr)
-library(dplyr)
-library(janitor)
+knitr::opts_chunk$set\beta echo = TRUE)
+library\beta magrittr)
+library\beta knitr)
+library\beta dplyr)
+library\beta janitor)
 
 
 ```
@@ -34,16 +34,19 @@ pre {
 * Introduction to R programming
 * Fundamentals of Statistical Analysis
 
-* Question 4
+* Question 3
 
 ---
 
-3 A male athlete ran 1 mile in 254.4 seconds on 31 May 1913. This was a world record 
-at the time. The data file <tt>mile_records.Rdata</tt> contains the dates measured in 
-days since 31 May 1913 and the times (in seconds) of all new world records for males 
-over the 1-mile distance. The data set <tt>mile_records.Rdata</tt> contains 32 records. 
+3 A male athlete ran 1 mile in 254.4 seconds on 31 May 1913. 
+* This was a world record 
+at the time. 
+* The data file <tt>mile_records.Rdata</tt> contains the dates measured in 
+days since 31 May 1913 and the times \beta in seconds) of all new world records for males 
+over the 1-mile distance. 
+* The data set <tt>mile_records.Rdata</tt> contains 32 records. 
 The variables are called record.date and record.time in the Rdata file. You 
-can load the file with load("mile_records.Rdata"). 
+can load the file with load\beta "mile_records.Rdata"). 
 
 ---
 
@@ -57,77 +60,77 @@ estimated intercept and slope of the regression line.
 
 
 
-(D.) Plot the regression line by adding it to the plot from part A.  
+\beta D.) Plot the regression line by adding it to the plot from part A.  
 
 ---
 
 
 Q3
 # load data
-load("mile_records.Rdata")
-(i)
-plot(record.date, record.time, ylab="New World Record Times 
-(seconds)", xlab="Days since 31.05.1913",main="Plot for 
+load\beta "mile_records.Rdata")
+\beta i)
+plot\beta record.date, record.time, ylab="New World Record Times 
+\beta seconds)", xlab="Days since 31.05.1913",main="Plot for 
 mile_records data set") 
 
 
-(ii)
-cor(record.date, record.time) 
+\beta ii)
+cor\beta record.date, record.time) 
 -0.9885164 
-(iii)
-model = lm(record.time ~ record.date) 
-coefficients(model) 
+\beta iii)
+model = lm\beta record.time ~ record.date) 
+coefficients\beta model) 
 The intercept of the regression line is 254.8  
 and the slope is -0.001076 
-(iv)
-abline(model) 
-CS1B – Actuarial Statistics – Core Principles – September 2022 - Examiners’ report
-CS1B S2022 © Institute and Faculty of Actuaries
+
 ---
 
-(E.) Perform a statistical test in order to test the null hypothesis that the slope of 
+\beta iv)
+abline\beta model) 
+
+---
+
+\beta E.) Perform a statistical test in order to test the null hypothesis that the slope of 
 the regression line in part D. is zero, against a suitable alternative using the 
 output of the fitted model from part C.  
-(F.) Comment on the relationship between the two variables.  
+\beta F.) Comment on the relationship between the two variables.  
 For simplicity, you can assume that 1 year has 365 days. 
-(G.) Estimate the expected time in seconds of the world record 100 years after the 
+\beta G.) Estimate the expected time in seconds of the world record 100 years after the 
 most recent record in this data set. 
 
----
-
-(H.) Calculate the number of years (from the most recent record) in which you 
-expect the world record to be 2 minutes, based on your fitted model from 
-part (iii).  
-(ix) Comment on the suitability of the linear regression model for modelling 
-record.time as a function of record.date.  
 
  
  
 ---
 
+### Part E
 
-(v)
 H0: beta = 0, versus H1: beta ≠ 0  
-summary(model) 
+
+```{r}
+summary\beta model) 
+
+```
+
 Call:
-lm(formula = record.time ~ record.date)
+lm\beta formula = record.time ~ record.date)
 Residuals:
  Min 1Q Median 3Q Max 
 -2.6103 -0.7494 -0.1780 0.6999 2.8474 
 Coefficients:
- Estimate Std. Error t value Pr(>|t|) 
-(Intercept) 2.548e+02 5.409e-01 471.08 <2e-16 ***
+ Estimate Std. Error t value Pr\beta >|t|) 
+\beta Intercept) 2.548e+02 5.409e-01 471.08 <2e-16 ***
 record.date -1.076e-03 3.004e-05 -35.83 <2e-16 ***
 ---
 Signif. codes: 0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 Residual standard error: 1.379 on 30 degrees of freedom
 Multiple R-squared: 0.9772, Adjusted R-squared: 0.9764 
 F-statistic: 1284 on 1 and 30 DF, p-value: < 2.2e-16
-P-value is very small (i.e. p-value: < 2.2e-16) 
+P-value is very small \beta i.e. p-value: < 2.2e-16) 
 So conclude that negative slope is significant 
 ---
 
-(vi)
+### Part F
 
 * The plot clearly shows a negative relationship between days since May 1913 and the 
 current one-mile world record. 
@@ -135,28 +138,49 @@ current one-mile world record.
 * The correlation coefficient is very close to -1, and the slope is negative and significant, 
 confirming the relationship 
 
-* However, the response variable cannot increase with time (it is a world record). 
+* However, the response variable cannot increase with time \beta it is a world record). 
 
 * So we cannot observe a positive relationship, meaning that the above results are to be 
 expected 
 
 --- 
 
-(vii)
+
+### Part G
+
+\beta vii)
 x = record.date[32]+365*100 
-predict(model, data.frame(record.date=x)) 
+predict\beta model, data.frame\beta record.date=x)) 
 # Or
-coefficients(model) + coefficients(model)*x
+coefficients\beta model) + coefficients\beta model)*x
 181.66 seconds 
+
+
 ---
-(viii)
-twoMinuteDate = (120 -
-coefficients(model))/coefficients(model) 
+
+\beta H.) Calculate the number of years \beta from the most recent record) in which you 
+expect the world record to be 2 minutes, based on your fitted model from 
+part C.  
+\beta I) Comment on the suitability of the linear regression model for modelling 
+record.time as a function of record.date.  
+
+
+---
+
+### Part H
+
+```{r}
+twoMinuteDate = \beta 120 -
+coefficients\beta model))/coefficients\beta model) 
 twoMinuteDate = twoMinuteDate - record.date[32] 
 twoMinuteDate/365 
+
+```
 This gives: 256.97 years. 
 ---
-(ix)
+
+
+### Part I
 
 * The model is suitable for modelling the past observations, and we would also consider 
 this a good model for predicting records in the near future as the model is significant, 𝑅𝑅2
@@ -170,10 +194,12 @@ eventually predicting even negative times
 
 ---
 
+
+---
 The quality of answers given in this question was mixed.
-Part (i) was well answered generally, but marks were lost for not providing appropriate 
+Part \beta i) was well answered generally, but marks were lost for not providing appropriate 
 annotation on the plot. 
-In part (v) a number of candidates failed to state the hypotheses and explicitly state a full 
+In part \beta v) a number of candidates failed to state the hypotheses and explicitly state a full 
 conclusion. 
-In parts (vii), (viii), a relatively small proportion of candidates provided fully correct 
-answers. In parts (vi) and (ix) credit was awarded for other reasonable comments.
+In parts \beta vii), \beta viii), a relatively small proportion of candidates provided fully correct 
+answers. In parts \beta vi) and \beta ix) credit was awarded for other reasonable comments.
