--- a/00-P1-CS1B-FIA-April-2023/P1-Question-3.Rmd
+++ b/00-P1-CS1B-FIA-April-2023/P1-Question-3.Rmd
@@ -46,7 +46,7 @@ random sample of heights of mothers (mother.height), fathers
 
 (i) Draw a scatterplot for each pair of data. 
 (ii) Comment on the relationships between the pairs of data by referring to the 
-plots from part (i). 
+plots from part A. 
 (iii) Fit a multiple linear regression model with the daughters’ height as the 
 response variable and mothers’ and fathers’ height as the explanatory 
 variables. Your answer should show a summary of the output and the fitted 
@@ -54,10 +54,10 @@ equation.
 
 ---
 (iv) Assess the effect of each explanatory variable on the dependent variable by 
-referring to the R output from part (iii). [4] 
+referring to the R output from part C.  
 (v) Plot the residuals of the model fitted in part (iii) using a graph that is 
 appropriate for checking if the estimated errors are independent of the 
-explanatory variables. [5] 
+explanatory variables. 
 (vi) Comment on the fit of the model by referring to the plot from part (v). 
 A suggestion is made that when the mother’s height is 61 inches and the father’s 
 height is 63 inches, their daughter’s height should be 67.5 inches. 
@@ -69,14 +69,26 @@ predictive interval of the daughter’s height based on the fitted model.
 
 Q3
 (i) R code:
+```{r}
 plot(heights, main = "Scatterplot of the heights of the daughter, mother and father") 
+```
 
+
+---
 (ii) The scatterplots suggest a (strong) positive and roughly linear relationship between mothers’ and daughters’ height. 
 The relationship between fathers’ and daughters’ height seems weaker 
 There is no association between mothers’ and fathers’ height. 
+
+---
 (iii) R code:
+
+```{r}
 mod1 = lm(daughter.height ~ mother.height + father.height) 
 summary(mod1)
+```
+
+---
+
 CS1B - Actuarial Statistics - Core Principles - April 2023 - Examiners’ report
 CS1B A2023 © Institute and Faculty of Actuaries
 #Residuals:
@@ -96,30 +108,51 @@ CS1B A2023 © Institute and Faculty of Actuaries
 #F-statistic: 17.67 on 2 and 17 DF, p-value: 7.057e-05 
 The fitted equation is
 𝑦𝑦􀷜=7.454+0.707 𝑀𝑀𝑀𝑀𝑀𝑀ℎ𝑒𝑒𝑟𝑟′𝑠𝑠 ℎ𝑒𝑒𝑒𝑒𝑒𝑒ℎ𝑡 +0.164 𝐹𝐹𝐹𝐹𝐹 ℎ𝑒𝑒𝑟𝑟′𝑠𝑠 ℎ𝑒𝑒𝑒𝑒𝑒𝑒ℎ𝑡 
-(iv) Mother’s height has a positive [½]
-significant positive effect on daughter’s height (p-value = 4e-05). [1½]
-On the other hand, although daughters’ height also increases with father’s height, [½]
-the effect is not significant (p-value = 0.213). [1½]
+
+---
+
+(iv) Mother’s height has a positive 
+significant positive effect on daughter’s height (p-value = 4e-05). 
+On the other hand, although daughters’ height also increases with father’s height, 
+the effect is not significant (p-value = 0.213). 
 (v) R code:
+```{r}
 mod1.residuals = residuals(mod1)
 # Or
+```
+
+```{r}
 # mod1.residuals = resid(mod1)
 mod1.fitted = fitted(mod1)
 #Or
 # mod1.fitted = fitted.values(mod1)
-plot(mod1.fitted,mod1.residuals, main = “Residuals of the fitted multiple regression model”) [3]
+```
+
+---
+
+```{r}
+plot(mod1.fitted,mod1.residuals, main = “Residuals of the fitted multiple regression model”) 
+````
 Alternative code: plot(mod1,1)
-CS1B - Actuarial Statistics - Core Principles - April 2023 - Examiners’ report
-CS1B A2023 © Institute and Faculty of Actuaries
+
+---
 
 (vi) There seem to be doubts about the assumption of constant variance, with residuals around fitted values 62-64 showing higher variation. 
 Also, although there seems to be random variation around zero, there is a larger number of positive residuals, indicating possible underestimation. 
 (vii) R code:
+
+```{r}
 newdata = data.frame(mother.height=61, father.height=63)
 predict(mod1,newdata,interval="predict",level=0.95) 
+```
 The 95% prediction interval (56.4, 65.4) 
 So, a daughter’s height of 67.5 inches seems unlikely, based on the fitted model. 
-[Total 27]
+
+---
+
+---
+
+
 Part (i): Well answered. A common error was not including annotations on the plot.
 Part (ii): Overall well answered. Some candidates failed to identify all 3 relevant points of the relationships shown in the plots.
 Part (iii): Well answered generally. A number of candidates failed to state the fitted equation.
@@ -127,4 +160,5 @@ Part (iv): Mixed answers. A common error was not referring explicitly to the p-v
 Part (v): Overall very well answered. A common error was plotting the residuals against an index, without reference to the explanatory variables or fitted values.
 Part (vi): Mixed answers. In a number of cases comments were unclear, but most candidates provided some valid comments.
 Part (vii): Well answered generally.
-CS1B - Actuarial Statistics - Core Principles - April 2023 - Examiners’ report
+
+---
