--- a/00-Q2-CS2B-ASI-May-2023/Q2_Question_1.Rmd
+++ b/00-Q2-CS2B-ASI-May-2023/Q2_Question_1.Rmd
@@ -42,19 +42,19 @@ The data set “Monthly_Corn.csv” contains monthly average closing prices and 
 i) Create a time series of the closing price by using an appropriate R function.
 (1)
 ii) Plot this series, labelling each axis appropriately.
-(2)
+
 iii) Based on visual inspection of the series, comment on whether the series is stationary or not.
 (1)
 iv) Plot the Auto-Correlation Function (ACF) and Partial Auto-Correlation Function (PACF) of the closing prices, labelling each axis appropriately.
-(4)
+
 v) Comment on the stationarity of the closing price by observing the plots in part (iv).
-(2)
+
 vi) Create another time series “monthly_returns” by using the formula log(Pt/Pt-1), where Pt and Pt-1 correspond to the closing prices of month t and t-1 respectively.
-(2)
+
 vii) Plot the ACF and PACF of the monthly returns series, labelling each axis appropriately.
-(3)
+
 viii) Comment on the stationarity of the monthly returns by observing the plots in part (vii).
-(2)
+
 ix) Based on the ACF and PACF of the returns series obtained in part (vii), identify the most appropriate ARMA model to be fitted to the series.
 (1)
 x) Fit the following four ARMA models to the returns series:
@@ -63,18 +63,20 @@ b) ARMA (0,1),
 c) ARMA (1,0) and
 d) ARMA (1,1)
 and identify the model with the least Akaike Information Criteria (AIC) value.
-(4)
+
 xi) Compare the result in part (ix) and part (x) and give a suitable explanation for any deviation observed.
-(2)
+
 [24]
 
 ---
 
 
 Solution 1:
+
+```{r}
 Corn_Prices<-read.csv("D:\\Monthly_corn.csv")
 (i) Close<-ts(Corn_Prices$Close,start = c(2017,1),frequency=12)
-
+```
 
 ```{r}
 plot(Close, ylab = "Corn Monthly prices", 
@@ -107,26 +109,46 @@ x=60)
 
 ---
 
-(v) If a series is stationary, the ACF should decay to zero quickly and sho
-uld not display any oscillation.The series is not stationary because auto cor
-relation function is not decaying to zero quickly. Also, if the number of lag
+(v) 
+
+* If a series is stationary, the ACF should decay to zero quickly and sho
+uld not display any oscillation.
+* The series is not stationary because auto cor
+relation function is not decaying to zero quickly. 
+* Also, if the number of lag
 s is increased, oscillation is also observed, hence cannot be stationary
 
 ---
 
 (vi) Create another time series "monthly_returns" by using the formula log(P
 t/Pt-1), where Pt and Pt-1 correspond to the closing prices of month t and t1 respectively.
+```{r}
 returns<-diff(log(Close))
- 
-(vii) acf(returns, main = "ACF", xlab = "Lags", ylab = "Serial Correlation", 
+```
+
+---
+
+(vii) 
+
+```{r}
+acf(returns, main = "ACF", xlab = "Lags", ylab = "Serial Correlation", 
 lag.max=60)
+```
+
 [1 for the plot, 0.5 for proper labeling of title and axes]
+
+```{r}
 pacf(returns, main = "PACF", xlab = "Lags", ylab = "Serial Correlation", lag.
 max=60)
+```
+
+---
 
 (viii) The monthly returns appear stationary. If a series is stationary, the A
 CF should decay to zero quickly and should not display any oscillation.
  
+---
+
 (ix) The most appropriate ARMA will be ARMA (0,0) as the ACF and PACF do not 
 show significance at any of the lags 
 (x) library(forecast)
@@ -136,10 +158,19 @@ show significance at any of the lags
 ## as.zoo.data.frame zoo
 
 
+
+---
+
+```{r}
 m1<-arima(returns,order = c(0,0,0))
 m2<-arima(returns,order = c(1,0,0))
 m3<-arima(returns,order = c(0,0,1))
 m4<-arima(returns,order = c(1,0,1))
+
+```
+
+---
+
 m1$aic
 ##  -164.6838
 m2$aic
@@ -148,6 +179,9 @@ m3$aic
 ##  -163.3079
 m4$aic
 ##  -165.2896
+
+--- 
+
 auto.arima(returns)
 ## Series: returns 
 ## ARIMA(0,0,0)(1,0,0)[12] with zero mean 
@@ -170,4 +204,5 @@ t lag 12, which might give rise to seasonal ARMA.
 # If we are forcefully fitting non seasonal models to a seasonal data, the di
 screpancy is possible.
  [1 mark for each valid observation, Max 2]
-[24 Marks]
+
+---
