--- a/00-S2-CS2B-ASI-Nov-2023/S2-Question-2.Rmd
+++ b/00-S2-CS2B-ASI-Nov-2023/S2-Question-2.Rmd
@@ -1,6 +1,6 @@
-
+---
 title: "Statistics with R"
-subtitle: "Introduction to R for Actuarial Students"
+subtitle: "Statistical Modelling with R for Actuarial Students"
 output:
   xaringan::moon_reader:
     lib_dir: libs
@@ -27,43 +27,54 @@ pre {
 }
 ```
 
-* Introduction to R for Actuarial Students
+***CS2B – Risk Modelling and Survival Analysis ***
 
-* CS1B Curriculum
 
-* Introduction to R programming
-* Fundamentals of Statistical Analysis
+* The emphasis is placed on being able to apply statistical methods to actuarial problems using real data sets and the open-source software environment R. 
+
+* Time Series. Probability Distributions, Survival Analysis
+
+---
+
+
+
+
 
 * Question 1
 ---
 
+### Exercises
 
 Q. 2)
 Consider the data file “Claims.csv” of claim amounts in 000’s in respect of a commercial property portfolio over a period of 10 years.
 i) Calculate the block maxima for these claims using block sizes of 5 claims and paste the output.
-(2)
+
 ii) Plot a histogram of the block maxima and label the diagram.
-(2)
+
 iii) Plot an empirical density function in the same graph as in part (ii) above.
-(2)
+
+---
+
 iv) Fit a Weibull distribution on the block maxima and calculate the estimates of the parameters of the Weibull distribution.
-(3)
+
 v) Calculate the mean, standard deviation and skewness of the block maxima.
-(3)
+
 vi) Write a function in R to compute the log-likelihood of the above distribution.
-IAI CS2B-1123
-Page 3 of 5
+
+---
+
 Hint : Use the following PDF function to compute the log likelihood.
-(2)
+
 vii) Find the maximum likelihood estimate of the parameters of the above distribution. Use mean, standard deviation and skewness calculated above as the initial estimates of the parameters.
-(2)
+
 viii) Superimpose a Generalized Extreme Value distribution on the block maxima using the estimates of the parameters calculated above in part (vii).
-(2)
+
 ix) Calculate the hazard rate for the block maxima and plot the graph of Hazard rate against block maxima and comment on the graph.
 (4)
 x) Calculate the mean residual life for the block maxima and plot the graph of mean residual life against block maxima. Comment on the graph.
 (5)
-[27]
+
+---
 
 Solution 2:
 i)
@@ -72,35 +83,56 @@ Claims$block <-(Claims$Claim_number-1) %/% 5 +1
 blockmax <- aggregate(Claims ~ block, Claims, max)
 blockmax block Claims 1 1 104 2 2 94 3 3 218 4 4 235 5 5 140 6 6 84 7 7 213 8 8 222 9 9 128 10 10 247 11 11 152 12 12 202 13 13 193 14 14 201 15 15 180 16 16 291 17 17 243 18 18 163 19 19 267 20 20 203
 [2]
-IAI CS2B-1123
-Page 8 of 15
+---
+
 ii) hist(blockmax$Claims, xlab = "Claims", main = "Histogram of block maxima")
+
 [2]
+
+---
+
+### Part C
+
 iii) hist(blockmax$Claims, xlab = "Claims", main = "Histogram of block maxima", freq = FALSE) lines(density(blockmax$Claims), col = "blue")
 [2]
 iv) library(MASS) est <- fitdistr(blockmax$Claims, "weibull", lower = 0) est shape scale 3.8973242 209.3505841 ( 0.7069667) ( 12.6163461)
 c = est$estimate["scale"]^ (-est$estimate["shape"]) > c scale 9.011579e-10 > g = est$estimate["shape"]
-IAI CS2B-1123
-Page 9 of 15
+
+--- 
+
 > g shape 3.897324
 [3]
 v) alpha = mean(blockmax$Claims) alpha [1] 189 beta = sd(blockmax$Claims) beta [1] 57.78271 gamma = skewness(blockmax$Claims) gamma [1] -0.273219
-[3]
+
+
+---
+### Part F
 vi) MLE = function(x){f <- 1/x[2]*(1+x[3]*(blockmax$Claims - x[1])/x[2])^(-1-1/x[3])*exp(-(1+x[3]*(blockmax$Claims- x[1])/x[2])^(-1/x[3])) lnf <- log(f) sum(-lnf) }
 [2]
 vii) p = c(alpha,beta,gamma) MLE(p) [1] 110.3667
 f_MLE <- nlm(MLE,p)
 f_MLE $minimum [1] 108.4947 $estimate [1] 173.0482986 59.5496685 -0.4257482 $gradient [1] -2.207406e-07 -7.863145e-07 -5.439915e-05 $code [1] 1 $iterations [1] 33
 [2]
-viii) GEV <- function(x,a,b,c){f = 1/b * (1+c*(x-a)/b)^-(1+1/c)*exp(-((1+c*(x-a)/b)^(-1/c)))} fit = GEV(blockmax$Claims,f_MLE$estimate[1],f_MLE$estimate[2],f_MLE$estimate[3]) fit [1] 0.002216593 0.001752716 0.006657504 0.005922606 0.004311508 0.001356100 0.006776331 [8] 0.006529717 0.003563970 0.005131517 0.005053503 0.006876667 0.006798624 0.006874941 [15] 0.006456144 0.001361035 0.005416809 0.005683342 0.003474704 0.006876611
-[2]
+viii) GEV <- function(x,a,b,c){f = 1/b * (1+c*(x-a)/b)^-(1+1/c)*exp(-((1+c*(x-a)/b)^(-1/c)))} 
+fit = GEV(blockmax$Claims,f_MLE$estimate[1],f_MLE$estimate[2],f_MLE$estimate[3]) 
+fit [1] 0.002216593 0.001752716 0.006657504 0.005922606 0.004311508 0.001356100 0.006776331 
+[8] 0.006529717 0.003563970 0.005131517 0.005053503 0.006876667 0.006798624 0.006874941 
+[15] 0.006456144 0.001361035 0.005416809 0.005683342 0.003474704 0.006876611
+
+---
+
+### Part G
+
 ix) h = dweibull(blockmax$Claims,g,est$estimate["scale"])/(1-pweibull(blockmax$Claims,g,est$estimate["scale"])) h [1] 0.002452262 0.001829610 0.020933123 0.026020746 0.005802246 0.001320774 0.019572126 [8] 0.022065445 0.004475462 0.030059810 0.007363354 0.016784861 0.014708485 0.016545242 [15] 0.012017747 0.048335279 0.028670960 0.009015548 0.037666671 0.017026742
 plot(m,blockmax$Claims)
-IAI CS2B-1123
-Page 10 of 15
+
+---
 The hazard function is an increasing function of x. An increasing hazard function indicates lighter tail.
 [4]
+
+---
+
+### Part J
 x) Sy = function(y,g,b){(1-pweibull(y,g,b))} int = integrate(Sy,0, Inf, g, est$estimate[“scale”]) ex = int$value/Sy(blockmax$Claims,g,est$estimate[“scale”]) plot(ex,blockmax$Claims)
 The mean residual life function is an increasing function of x. An increasing mean residual function indicates a lighter tail.
-[5]
-[27 Marks]
+
