--- a/00-M2-CS2B-ASI-July-2022/M2-Question5.Rmd
+++ b/00-M2-CS2B-ASI-July-2022/M2-Question5.Rmd
@@ -76,28 +76,38 @@ trunc_logN <- function(k, mu, sig, L, U){
 
 
 # (ii)
+```{r}
 trunc_logN(1, 1.2, 0.7, 10,Inf)
 ## [1] "First term: 4.24185214282043"
 ## [1] "Phi(Uk): 1"
 ## [1] "Phi(Lk): 0.809246116780569"
 ## [1] "Final Value: 0.809149768285661"
+```
+
+```{r}
 trunc_logN(2, 1.2, 0.7, 10,Inf)
 ## [1] "First term: 29.3707711132894"
 ## [1] "Phi(Uk): 1"
 ## [1] "Phi(Lk): 0.569507941751428"
 ## [1] "Final Value: 12.6438837089077"
+```
 ---
+
+
+### Part C
 # (iii)
-# First moment of a normal distribution = mu = 1.2
-# Second moment of a normal distribution = 0.7^2+1.2^2 = 1.93
-# The question should have been "Log normal distribution" instead of normal d
-istribution
-# Assuming Lognormal distribution
-# Moments of Lognormal distribution are 
+*  First moment of a normal distribution = mu = 1.2
+* Second moment of a normal distribution = 0.7^2+1.2^2 = 1.93
+* The question should have been "Log normal distribution" instead of normal distribution
+* Assuming Lognormal distribution
+* Moments of Lognormal distribution are 
+
+```{r}
 exp(1.2+0.5*0.7^2)
 ## [1] 4.241852
 exp(2*1.2+0.7^2)*(exp(0.7^2)-1)+(exp(1.2+0.5*0.7^2))^2
 ## [1] 29.37077
+```
 
 ---
 
