--- a/00-P1-CS1B-FIA-April-2023/P1-Question-2.Rmd
+++ b/00-P1-CS1B-FIA-April-2023/P1-Question-2.Rmd
@@ -43,31 +43,35 @@ whether the policyholder has submitted at least one claim during the last 6-mont
 period, the age of the policyholder and the duration of the policy. The number of 
 policies, X, with one or more submitted claims is modelled as a random variable with 
 a Binomial distribution X ~ Binomial(1000, p). 
+
+---
 (i) State the underlying assumptions that lead to the choice of a Binomial 
 distribution for X.  
 Use the command load("CS1policies.Rdata") to load the observed data into 
 R. This will create a data frame called CS1policies with three entries in your R 
 workspace. You can check the names of the entries with names(CS1policies): 
- age: age of the policyholder in years 
- duration: duration of the policy in months 
- claimed: takes the values 0 (no claim in 6-month period) or 1 (at least one claim 
+*  age: age of the policyholder in years 
+*  duration: duration of the policy in months 
+*  claimed: takes the values 0 (no claim in 6-month period) or 1 (at least one claim 
 in 6-month period). 
+
+---
+
 An Actuary wishes to fit different Generalised Linear Models (GLMs) to the data, 
 assuming that the number of policies with one or more submitted claims has a 
 Binomial distribution and the link function of the GLM is the logit function. 
 (ii) Fit a GLM to the data such that p depends on the age of the policyholder and 
-report the estimated parameter values. [5] 
+report the estimated parameter values.  
 (iii) Fit a GLM to the data such that p depends on the duration of the policy and 
-report the estimated parameter values. [5] 
+report the estimated parameter values.  
 (iv) Compare the fit of the models in parts (ii) and (iii) using the deviance and 
-the Akaike’s Information Criterion (AIC). [3] 
+the Akaike’s Information Criterion (AIC).  
 (v) Fit a GLM to the data, such that p depends on both the age of the policyholder 
-and the duration of the policy, and report the estimated parameter values. [5] 
+and the duration of the policy, and report the estimated parameter values.  
 (vi) Comment on which of the three models in parts (ii), (iii) and (v) is most 
 appropriate, justifying your answer.  
- [Total 22] 
- 
-CS1B A2023–4 
+
+---
 
 
 Q2 (i) We need to assume that the 1,000 policies are independent 
@@ -79,13 +83,19 @@ summary(model1)
 intercept = -2.336974, 
 slope (age) = 0.024023 
 Histogram of t4.valt4.valFrequency-10-5051015010003000Histogram of t20.vat20.valFrequency-4-202405001000
-CS1B - Actuarial Statistics - Core Principles - April 2023 - Examiners’ report
-CS1B A2023 © Institute and Faculty of Actuaries
+
+---
+
+### Part C
+
 (iii)
 model2 = glm(claimed ~ duration, data = CS1policies, family = binomial) 
 summary(model2 ) 
 intercept = 0.390062, 
 slope (duration) = -0.027608 
+
+---
+
 (iv)
 Residual deviance(model1) = 1051.8 , deviance(model2) = 948.98 
 AIC(model1) = 1055.8 , AIC(model2) = 952.98 
@@ -95,21 +105,32 @@ in part (iii).
 Alternative answer:
 The accuracy of the AIC depends on which R command is used: model1, summary(model1) or AIC(model1), which give 1056, 1055.8 and 1055.78, respectively.
 For model2 they give 953, 952.98 and 952.9805, respectively.
+
+---
+
 (v)
 model3 = glm(claimed ~ age + duration, data = CS1policies, family = binomial) 
 summary(model3) 
 Intercept = -0.909944
 Slope(age) = 0.029434
 Slope(duration) = -0.028040 
+
+---
+
 (vi)
 The AIC (AIC (model3)= 945.51) has decreased compared to the model in part (iii) (which is already better than the model in part (ii)) 
 We would therefore use both, age and duration, in a linear predictor, and choose the model in part (v). 
 Alternative answer:
 The accuracy of the AIC depends on which R command is used: model3, summary(model3) or AIC(model3), which give 945.5, 945.51 and 945.5106, respectively.
-[Total 22]
+
+---
+
+
+---
 Parts (i)-(iii) were well answered generally. In part (ii) (and later parts) a number of candidates failed to report clearly the estimated parameter values.
 CS1B - Actuarial Statistics - Core Principles - April 2023 - Examiners’ report
 CS1B A2023 © Institute and Faculty of Actuaries
 Part (iv): Well answered. A fair number of candidates failed to state the statistics (or the conclusion) explicitly. Some candidates considered the AIC only and not the deviance.
 Part (v): Candidates performed well here and consistently with their answers in earlier parts (ii) and (iii). Answers including the interaction term received full marks as appropriate (and later).
 Part (vi): Well answered generally. Some candidates used an alternative answer involving the deviances and anova() to compare models, and received credit as appropriate.
+
