--- a/00-P1-CS1B-FIA-April-2023/P1-Question-4.Rmd
+++ b/00-P1-CS1B-FIA-April-2023/P1-Question-4.Rmd
@@ -61,13 +61,13 @@ matrix(c(5000,3680,880,6150,1100,2720,3360,800,3880,970,
 (i) Calculate, using Empirical Bayes Creditability Theory (EBCT) Model 1, the 
 following: 
 (a) Eሾmሺϑሻሿ  
-(b) Varሾmሺϑሻሿ [3] 
+(b) Varሾmሺϑሻሿ  
 (c) Eሾs2ሺϑሻሿ  
 
 ---
 
 (ii) Calculate the expected claim amount for Company E, using your answers from 
-part (i). [3] 
+part (i).  
 The table below shows additional information that has been provided showing the 
 number of claims, Pij, over a 5-year period for the five insurance companies. 
 Year, j 
@@ -90,57 +90,64 @@ matrix(c(580,440,180,990,210,540,460,160,1000,200,490,
 ---
 
 (iii) Calculate, using EBCT Model 2, the following: 
-(a) Eሾmሺϑሻሿ [7] 
-(b) Varሾmሺϑሻሿ [4] 
-(c) Eሾs2ሺϑሻሿ [3] 
+(a) Eሾmሺϑሻሿ  
+(b) Varሾmሺϑሻሿ  
+(c) Eሾs2ሺϑሻሿ  
 (iv) Calculate the expected claim amount for Company E, using your answers from 
 part (iii), assuming that the number of claims for Company E in the following 
-year remains at 130. [3] 
+year remains at 130.  
 (v) Comment on the difference between models EBCT Model 1 and EBCT 
 Model 2 applied in earlier parts, by comparing your answers in parts (ii) 
 and (iv).  
- [Total 29] 
-END OF PAPER 
 
-CS1B A2023 © Institute and Faculty of Actuaries
+---
+
 Q4
 Note the answers shown here are in units of 1,000s (or 1,000,000s for variances).
+
+### Part A
+
 > n = ncol(claims)
 (i)(a)
 > m <- mean(rowMeans(claims)) 
  3,383.2 
 (i)(b)
 > v <- var(rowMeans(claims)) - mean(apply(claims,1,var))/n [2½]
- 3,232,667 [½]
+ 3,232,667 
 (i)(c)
-> s <- mean(apply(claims,1,var)) [1½]
- 1,887,450 [½]
+> s <- mean(apply(claims,1,var)) 
+ 1,887,450 
 (ii)
 > Z <- n/(n+s/v) 
  0.8954367 or 89.54%
 > Z * rowMeans(claims)+(1-Z)*m 
  3960.578 4270.399 1202.633 5391.485 2090.906
 Estimated claims amount for company E is 2,090.91. 
+
+---
+
 (iii)(a)
 > n <- ncol(claims)
-> N <- nrow(claims) [½]
-> X <- claims/volumes [½]
+> N <- nrow(claims) 
+> X <- claims/volumes 
 > Xi_bar <- rowSums(claims)/rowSums(volumes) 
-> Pi <- rowSums(volumes) [½]
-> P <- sum(Pi) [½]
+> Pi <- rowSums(volumes) 
+> P <- sum(Pi) 
 > P_star <- sum(Pi*(1-Pi/P))/(N*n-1) 
 > m2 <- sum(claims)/P 
  7.319775 
 (b)
-> v2 <- (sum(rowSums(volumes*(X-m2)^2))/(N*n-1) - mean(rowSums(volumes*(X-Xi_bar)^2)/(n-1)))/P_star [3]
+> v2 <- (sum(rowSums(volumes*(X-m2)^2))/(N*n-1) - mean(rowSums(volumes*(X-Xi_bar)^2)/(n-1)))/P_star 
  3.151102 
 
 ---
 
 (iii)(c)
-> s2 <- mean(rowSums(volumes*(X-Xi_bar)^2)/(n-1)) 
-CS1B - Actuarial Statistics - Core Principles - April 2023 - Examiners’ report
-CS1B A2023 © Institute and Faculty of Actuaries
+> 
+
+```{r}
+s2 <- mean(rowSums(volumes*(X-Xi_bar)^2)/(n-1)) 
+```
  4356.445 
 
 ---
@@ -149,19 +156,24 @@ CS1B A2023 © Institute and Faculty of Actuaries
 > Zi <- Pi/(Pi+s2/v2)
  0.6662620 0.6097364 0.3807366 0.7799425 0.3902952
 or 39.03% credibility factor for company E.
-> Zi*Xi_bar + (1-Zi)*m2 [½]
+> Zi*Xi_bar + (1-Zi)*m2 
  7.304668 9.030223 6.656035 6.088278 8.740714
-Therefore the premium (i.e. expected claims) for company E in the coming year will be: 8.740714 * 130 = 1,136.29 [1½]
+Therefore the premium (i.e. expected claims) for company E in the coming year will be: 8.740714 * 130 = 1,136.29 
+
+---
 (v)
 The expected claim amount for company E is lower using EBCT model 2. 
-EBCT model 2 allows for the number of claims (volumes), [½]
-which has been declining [½]
-[Total 29]
+EBCT model 2 allows for the number of claims (volumes), 
+which has been declining 
+
+---
+
+---
+
 Part (i): Very well answered overall. In (b) and (c) a small number of candidates gave confused answers between v and s.
 Part (ii): Very well answered overall. A number of candidates did not mention explicitly the figure for company E.
 Part (iii): Very well answered overall. As in part (i), a small number of candidates showed confused answers between v and s.
 Part (iv): Well answered generally, with some small calculation errors. As in part (ii), some candidates did not mention explicitly the figure for company E.
 Part (v): This part was not well answered. A number of candidates did not attempt it, but most candidates received partial credit for providing some valid comments.
-[Paper Total 100]
-END OF EXAMINERS’ REPORT
-Beijing
+
+---
