--- a/00-S1-CS1B-ASI-Nov-2023/S1-Question-2.Rmd
+++ b/00-S1-CS1B-ASI-Nov-2023/S1-Question-2.Rmd
@@ -54,6 +54,13 @@ Make sure to paste the scatterplot in your answer scripts.
 (4)
 iii) Using scatterplot of part (ii), comment on the relationship between the pairs of data.
 (3)
+
+---
+
+
+
+
+---
 iv) Fit a multiple linear regression model with
 - Final score as response variable and
 - Judges and Audience score as explanatory variables.
@@ -67,15 +74,24 @@ d) Comment on the significance of the each explanatory variable either referring
 (3)
 You published the report showing the above results and reference data on your research website. After few months, a journalist accused the dance show of ignoring audience scores and cited your report.
 The sponsors of dance show stated that incomplete data is used for analysis as audience score depends upon the number of audiences provided scores. They shared supplement data providing the number of audiences for each participant.
+
+
+---
+
 v) Using the following code to load the number of audiences for 20 contestants
+<pre><code>
 audience.count<-c(110,100,90,120,100,100,100,100,110,110,100,
 100,110,90,100,110,120,120,100,100)
+</code></pre>
 Also, verify total count is equal to 2090.
 (2)
 vi) Compute the new audience score by dividing the sum of score provided by audience (“Audience”) with audience count (“audience.count”).
 Store as Audience2 and make sure to attach to the dance data.
 Please don’t paste Audience2 values.
-(2)
+
+
+---
+
 vii) Perform correlation test to check whether any correlation exits between final score and new audience score.
 (3)
 viii) Fit a new multiple linear regression model with
@@ -83,26 +99,33 @@ viii) Fit a new multiple linear regression model with
 - Judges and New Audience score as explanatory variables.
 Store this model as m2 and show the summary of the output.
 (3)
-IAI CS1B-1123
-Page 4 of 6
+
 ix) Using a suitable statistic from part (iv.b) and (viii). outputs, compare models m1 and m2 and suggest which model is better.
 Please write the figures of the statistic while answering.
 (3)
 [34]
 
-
+---
 Solution 2:
 i)
+```{r}
 dance<-read.csv("dance.csv")
 head(dance)
+```
+
 [2]
 ii)
+```{r}
 plot(dance)
-[4]
+
+```
+---
+
 iii)
 Judges score and Final score seems to have a linear relationship
 Audience score is quite scattered and doesn't show any strong linear relationship with either Judges or Final score
-[3]
+
+---
 iv)
 a)
 b)
@@ -119,8 +142,9 @@ Estimate Std. Error t value Pr(>|t|)
 Judges 0.720273 0.128870 5.589 3.26e-05 ***
 Audience 0.001449 0.001294 1.120 0.278
 [2]
-IAI CS1B-1123
-Page 5 of 8
+
+---
+
 c)
 d)
 ---
@@ -140,19 +164,43 @@ Sum of audience score doesn’t seem significant sine it contains 0.
 Alternate:
 > #P-value is <.01 for judges score showing significance.
 [4]
-[3]
-[3]
+
+---
+
 v)
-audience.count<-c(110,100,90,120,100,100,100,100,110,110,100,
-100,110,90,100,110,120,120,100,100)
+```{r}
+audience.count<-c(110,100,90,120,100,100,100,100,110,110,100, 100,110,90,100,110,120,120,100,100)
 sum(audience.count)
+```
+
 [1] 2090
-[2]
+
 vi)
 dance$Audience2<-dance$Audience/audience.count
-[2]
-vii)
-> cor.test(dance$Final,dance$Audience2)
+---
+
+G. Perform correlation test to check whether any correlation exits between final score and new audience score.
+
+
+H. Fit a new multiple linear regression model with
+- Final score as response variable and
+- Judges and New Audience score as explanatory variables.
+Store this model as m2 and show the summary of the output.
+
+
+I.  Using a suitable statistic from part (iv.b) and (viii). outputs, compare models m1 and m2 and suggest which model is better.
+Please write the figures of the statistic while answering.
+
+
+
+---
+
+### Part G
+
+```{r}
+cor.test(dance$Final,dance$Audience2)
+```
+
 Pearson's product-moment correlation
 data: dance$Final and dance$Audience2
 t = 4.9045, df = 18, p-value = 0.0001142
@@ -163,18 +211,23 @@ sample estimates:
 cor
 0.7562948
 > #correlation between audience score and final score is quite high
-[3]
+
+---
+
+### Part H
+
 viii)
+```{r}
 m2<-lm(Final~Judges+Audience2,data=dance)
 > summary(m2)
+```
 Call:
 lm(formula = Final ~ Judges + Audience2, data = dance)
 Residuals:
 Min 1Q Median 3Q Max
 -1.9408 -1.0269 0.1129 1.0466 1.6075
 Coefficients:
-IAI CS1B-1123
-Page 6 of 8
+
 Estimate Std. Error t value Pr(>|t|)
 (Intercept) 1.20323 5.84491 0.206 0.839
 Judges 0.56604 0.06545 8.648 1.24e-07 ***
@@ -184,11 +237,11 @@ Signif. codes: 0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 
 Residual standard error: 1.258 on 17 degrees of freedom
 Multiple R-squared: 0.9207, Adjusted R-squared: 0.9114
 F-statistic: 98.73 on 2 and 17 DF, p-value: 4.39e-10
-[3]
+
+---
 ix)
 #Adjusted R-square =0.9114 for model2 vs 0.6201 for model1.
 #This indicates model 2 is better
 Alternate:
 # R square can be used
-[3]
-[34 Marks]
+
