--- a/00-S1-CS1B-ASI-Nov-2023/S1-Question-3.Rmd
+++ b/00-S1-CS1B-ASI-Nov-2023/S1-Question-3.Rmd
@@ -56,6 +56,9 @@ Null deviance: 30.147 on 19 degrees of freedom
 Residual deviance: 30.147 on 19 degrees of freedom
 AIC: 71.114
 Number of Fisher Scoring iterations: 5
+
+---
+
 i) Write the equation of the fitted model using Output 1 as above and specify which distribution is used to model the response variable.
 (2)
 ii) Using output 1, show that the sample mean of the response variable is 1.7 (when rounded to one decimal place).
@@ -74,13 +77,14 @@ GenderM 1.1394 0.2216 5.143 2.71e-07 ***
 HealthNonDiabetic -1.4271 0.3939 -3.623 0.000291 ***
 ---
 Signif. codes: 0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
-IAI CS1B-1123
-Page 5 of 6
 (Dispersion parameter for poisson family taken to be 1)
 Null deviance: 38.229 on 20 degrees of freedom
 Residual deviance: 14.436 on 17 degrees of freedom
 AIC: 59.403
 Number of Fisher Scoring iterations: 5
+
+---
+
 iii) Write the equation of the fitted model using Output 2.
 Make sure to define the explanatory (categorical) variables.
 (4)
@@ -105,20 +109,29 @@ ii)
 > Claim.mean<-round(exp(.5306),1)
 > Claim.mean
 [1] 1.7
-[2]
+
+---
+
+### Part CS1B
+
 iii)
 log(y) = 1.1394 * GenderF + 1.1394 * GenderM -1.4271 *HealthNonDiabetic
 where GenderF =1 if Gender = F else 0
 GenderM =1 if Gender = M else 0
 HealthNonDiabetic =1 if Health= NonDiabetic else 0
-[Max 4]
+
+--- 
+
 iv)
 For model 2, “-1” is used in Glm R formula to not take the intercepts while fitting the model.
 Thus, no intercept exits.
 [2]
 v)
 AIC (=59.4) of model 2 which is lower than AIC (71.1) of model 1. This indicates that model 2 is better.
-[2]
+
+---
+
+### Part F
 vi)
 #AIC = - 2LogL(Model) + 2*Parameters
 > #LogL(Model) = Parameters - AIC/2
@@ -128,14 +141,15 @@ vi)
 > L<- par - aic/2
 > L
 [1] -26.7015
-[Max 3]
+
+--- 
+
 vii)
 #Total claims = Mean claims * Total policies
 > x<-Claim.mean*20
 > poisson.test(x=X,T=20,r=1.5,conf.level = 0.99)
 Exact Poisson test
-IAI CS1B-1123
-Page 7 of 8
+
 data: X time base: 20
 number of events = 34, time base = 20, p-value = 0.4639
 alternative hypothesis: true event rate is not equal to 1.5
@@ -147,3 +161,5 @@ event rate
 >
 > # We cannot reject the null hypothesis that parameter is equal to 1.5.
 [Max 5]
+
+---
